[package]
name = "egui_skia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
winit = ["dep:egui-winit"]

[profile.dev]
opt-level = 3

[dependencies]

egui = "0.19"
skia-safe = { version = "^0.53", features = [] }
egui-winit = { version = "0.19", optional = true }


[dev-dependencies]
softbuffer = { git = "https://github.com/lucasmerlin/softbuffer" }
egui_demo_lib = "0.19"
raw-window-handle = "0.5"
foreign-types-shared = "0.1.1"


[target.'cfg(target_os = "macos")'.dev-dependencies]
metal = "0.24"
cocoa = "0.24"
core-graphics-types = "0.1"
objc = "0.2"
